--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 The dissertation has been uploaded as a pdf, the dissertation is split into two seperate research problems, although both within the realm of computational biology, speficifically on the topic of protein folding.
 The code for each of the two sections has been divided into two folders in this repo respectively.
+It is advised that you start with the dissertation pdf.
